fix del overflow

--- a/src/App.css
+++ b/src/App.css
@@ -16,5 +16,5 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow: visible;
 }
